did many changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="main.scss" />
   </head>
   <body>
-    <div class="app"></div>
+    <div class="app container"></div>
     <script src="index.ts" type="module"></script>
   </body>
 </html>
